# lucene-rust

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: codec.rs  error.rs  id.rs  index.rs  io.rs  lib.rs  search.rs  version.rs
core/src/analysis/: mod.rs  token_stream.rs
core/src/analysis/tokenattributes/: mod.rs
core/src/codec/: lucene_90.rs  lucene_95.rs  segment_info.rs
core/src/codec/lucene_90/: segment_info.rs
core/src/fs/: directory.rs
core/src/geo/: mod.rs
core/src/index/: automaton_terms_enum.rs  binary_doc_values.rs  composite_reader.rs  doc_values_type.rs  filtered_terms_enum.rs  header.rs  impacts_source.rs  index_options.rs  index_reader.rs  index_reader_context.rs  index_sorter.rs  indexable_field.rs  indexable_field_type.rs  leaf_meta_data.rs  leaf_reader_context.rs  mod.rs  ord_term_state.rs  ordinal_map.rs  point_values.rs  postings_enum.rs  reader.rs  segment_index.rs  segment_info.rs  sorted_numeric_doc_values.rs  sorted_set_doc_values.rs  terms_enum.rs  writer.rs
core/src/io/: codec.rs  crc32_reader.rs  directory.rs  encoding.rs  mod.rs  segment_index.rs
core/src/search/: field_comparator_source.rs  field_value.rs  leaf_field_comparator.rs  scorable.rs  sort.rs  sort_field.rs  top_docs.rs
core/src/util/: bit_util.rs  float.rs  version.rs
core/tests/: .gitattributes  rfc_database.rs
core/tests/rfc-database/: _0.cfe  _0.cfs  _0.si  _b.cfe  _b.cfs  _b.si  _c.fdm  _c.fdt  _c.fdx  _c.fnm  _c.nvd  _c.nvm  _c.si  _c_Lucene90_0.doc  _c_Lucene90_0.pos  _c_Lucene90_0.tim  _c_Lucene90_0.tip  _c_Lucene90_0.tmd  segments_1
(+104 files in other folders)
