[workspace]
members = ["core"]

[workspace.package]
authors = [
    "David Cuthbert <dacut@kanga.org>",
]
edition = "2021"
homepage = "https://github.com/dacut/lucene-server-rust"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/dacut/lucene-server-rust"
version = "0.1.0+lucene-9.4.2"
