[package]
name = "lucene-core"
description = "Lucene core library"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
can_vector = []

[dependencies]
async-trait = "0.1.60"
bitvec = "1.0.1"
byteorder = "1.4.3"
crc32fast = "1.3.2"
log = "^0.4"
once_cell = "1.16.0"
pin-project = "1.0.12"
rand = "0.8.5"

[dependencies.tokio]
version = "1.23.0"
features = ["io-util"]

[dev-dependencies]
pretty_assertions = "^1.3"
test-log = "^0.2"
env_logger = "^0.9"
